--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span>https://twitter.com/AlexMontas</a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/AlexMontas" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/Almontas/" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:alexmontasmusic@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 				
 				</div>
