Product Marketing Manager Title

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/linkedinpic.jpg" alt="" /></span>
 							<h1 id="title">Alex Montas</h1>
-							<p>Marketing Consultant</p>
+							<p>Product Marketing Manager</p>
 						</div>
 
 					<!-- Nav -->
